# Programmer_Resource_DevOps

./: .dockerignore  Dockerfile  README.md  df_bk  docker-compose.yml
.github/workflows/: ECR-update.yml  ECS-apply.yml  ECS-deploy.yml  ECS-destroy.yml  docker-push  docker-push-without-key.yml  docker-push.yml
SQL_Convert_Tool/: P2l.py  consolidate_tables.py  pyproject.toml
backend/: .dockerignore  Dockerfile.backend  app.py  requirements.txt
frontend/: Dockerfile.frontend  package-lock.json  package.json
frontend/src/: App.js
terraform-ecs/: main new ecr with var  main.tf  terraform_reference.tf  variables.tf
terraform-prepare/: main create iam role  main no ecr with var  main no var for demo.tf
