[tool.poetry]
name = "python-tool"
version = "0.1.0"
description = ""
authors = ["zhaoliang <zhao.liang.cp@canon-its.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
